
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int clipH ;
 int clipW ;
 int clipX ;
 int clipY ;

void
ui_set_clip(int x, int y, int cx, int cy)
{
 clipX = x;
 clipY = y;
 clipW = cx;
 clipH = cy;
}
